force-app/main/default/objects/Tracking__c/Tracking__c.object-meta.xml
<CustomObject>
    <externalRepository>false</externalRepository>
    <isDeprecatedInExternalSchema>false</isDeprecatedInExternalSchema>
    <isPayloadEnabled>false</isPayloadEnabled>
    <label>Tracking</label>
    <nameField>
        <label>Tracking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking Records</pluralLabel>
    <publishedService>false</publishedService>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Master record type for all tracking events</description>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>