force-app/main/default/objects/Tracking__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Reverse-geocoded address for the current location</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>