force-app/main/default/objects/Tracking__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <description>Lookup to Driver__c record (resolved from Motive driver ID)</description>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Tracking Records</relationshipLabel>
    <relationshipName>TrackingByDriver</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>