force-app/main/default/objects/Tracking__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>Timestamp when the event occurred (UTC)</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>