force-app/main/default/objects/Tracking__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of tracking event (arrived_at_pickup, in_transit, arrived_at_delivery, etc.)</description>
    <label>Event Type</label>
    <picklist>
        <picklistValues>
            <fullName>arrived_at_pickup</fullName>
            <label>Arrived at Pickup</label>
        </picklistValues>
        <picklistValues>
            <fullName>arrived_at_delivery</fullName>
            <label>Arrived at Delivery</label>
        </picklistValues>
        <picklistValues>
            <fullName>in_transit</fullName>
            <label>In Transit</label>
        </picklistValues>
        <picklistValues>
            <fullName>pickup_complete</fullName>
            <label>Pickup Complete</label>
        </picklistValues>
        <picklistValues>
            <fullName>delivery_complete</fullName>
            <label>Delivery Complete</label>
        </picklistValues>
        <picklistValues>
            <fullName>en_route_to_pickup</fullName>
            <label>En Route to Pickup</label>
        </picklistValues>
        <picklistValues>
            <fullName>en_route_to_delivery</fullName>
            <label>En Route to Delivery</label>
        </picklistValues>
        <picklistValues>
            <fullName>idle_parked</fullName>
            <label>Idle/Parked</label>
        </picklistValues>
        <picklistValues>
            <fullName>vehicle_location_update</fullName>
            <label>Vehicle Location Update</label>
        </picklistValues>
        <picklistValues>
            <fullName>delay_traffic</fullName>
            <label>Delay Traffic</label>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>