force-app/main/default/objects/Tracking__c/fields/Heading_degrees__c.field-meta.xml
<CustomField>
    <fullName>Heading_degrees__c</fullName>
    <description>Vehicle heading in degrees (0-360)</description>
    <label>Heading (degrees)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>