force-app/main/default/objects/Tracking__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Current GPS latitude from Samsara</description>
    <label>Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>