force-app/main/default/objects/Tracking__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Tracking Records</relationshipLabel>
    <relationshipName>TrackingRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>