force-app/main/default/objects/Tracking__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Current GPS longitude from Motive</description>
    <label>Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>