force-app/main/default/objects/Tracking__c/fields/Motive_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Motive_Event_ID__c</fullName>
    <description>External unique event ID from Motive (for duplicate detection and idempotent processing)</description>
    <externalId>true</externalId>
    <label>Motive Event ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>