force-app/main/default/objects/Tracking__c/fields/Motive_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Motive_Vehicle_ID__c</fullName>
    <description>External ID from Motive for this vehicle</description>
    <externalId>true</externalId>
    <label>Motive Vehicle ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>