force-app/main/default/objects/Tracking__c/fields/Samsara_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Driver_ID__c</fullName>
    <description>External ID from Samsara for the driver</description>
    <label>Samsara Driver ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>