force-app/main/default/objects/Tracking__c/fields/Samsara_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Vehicle_ID__c</fullName>
    <description>External ID from Samsara for this vehicle</description>
    <externalId>true</externalId>
    <label>Samsara Vehicle ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>