force-app/main/default/objects/Tracking__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Sequence number for this load's tracking (for sorting chronologically)</description>
    <label>Sequence Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>