force-app/main/default/objects/Tracking__c/fields/Speed_mph__c.field-meta.xml
<CustomField>
    <fullName>Speed_mph__c</fullName>
    <description>Current vehicle speed in miles per hour</description>
    <label>Speed (mph)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>